# milagro_bls

./: .gitmodules  .travis.yml  Cargo.toml  README.md
amcl/: Cargo.toml
amcl/src/: gcm.rs  lib.rs
amcl/src/bls381/: big.rs  dbig.rs  ecp.rs  ecp2.rs  fp.rs  fp12.rs  fp2.rs  fp4.rs  mpin.rs
amcl/src/bls383/: big.rs  dbig.rs  ecp.rs  ecp2.rs  fp.rs  fp12.rs  fp2.rs  fp4.rs  mpin.rs
amcl/src/secp256k1/: big.rs  dbig.rs  ecp.rs  fp.rs
benches/: bls381_benches.rs  bls381_map_to_curve_benches.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_serde_g2.rs  fuzz_serde_public_key.rs  fuzz_serde_signature.rs
src/: aggregates.rs  amcl_utils.rs  errors.rs  fouque_tibouchi.rs  g1.rs  g2.rs  jacobian.rs  keys.rs  lib.rs  optimised_swu.rs  psi_cofactor.rs  rng.rs  signature.rs  sqrt_division_chain.rs
src/test_vectors/: README.md  bls_standard_vectors_g2.yml
