[package]
name = "milagro_bls"
version = "0.9.0"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>", "Kirk Baird <kirk@sigmaprime.io>", "Paul Hauner <paul@sigmaprime.io>"]
description = "BLS12-381 signatures using the Apache Milagro curve library, targeting Ethereum 2.0"
license = "Apache-2.0"

[[bench]]
name = "bls381_benches"
harness = false

[dependencies]
amcl = { path = "./amcl", default-features = false }
hex = { version = "0.3", optional = true }
lazy_static = { version = "1.0", optional = true }
rand = { version = "0.5", default-features = false }
ring = "0.14.6"
yaml-rust = { version = "0.4", optional = true }

# This cannot be specified as dev-dependencies. Otherwise a cargo bug will always resolve `rand` with `std` feature, which breaks `no_std` builds.
criterion = { version = "0.2", optional = true }

[features]
default = ["std"]
bench = ["criterion"]
std = [
  "amcl/std",
  "rand/std",
  "lazy_static",
  "hex",
  "yaml-rust",
]
