[package]
name = "milagro_bls"
version = "1.5.0"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>", "Kirk Baird <kirk@sigmaprime.io>", "Paul Hauner <paul@sigmaprime.io>"]
description = "BLS12-381 signatures using the Apache Milagro curve library, targeting Ethereum 2.0"
license = "Apache-2.0"

[[bench]]
name = "bls381_benches"
harness = false

[dependencies]
amcl = { path = "./incubator-milagro-crypto-rust", default-features = false, features = ["bls381"]}
hex = { version = "0.4.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
rand = { version = "0.8.5", default-features = false }
zeroize = "1.0.0"

# This cannot be specified as dev-dependencies. Otherwise a cargo bug will always resolve `rand` with `std` feature, which breaks `no_std` builds.
criterion = { version = "0.3.0", optional = true }

[features]
default = ["std"]
bench = ["criterion"]
std = [
  "rand/std",
  "rand/std_rng",
  "lazy_static",
  "hex",
]
