[package]
name = "snowbridge-milagro-bls"
version = "1.5.4"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>", "Kirk Baird <kirk@sigmaprime.io>", "Paul Hauner <paul@sigmaprime.io>"]
description = "BLS12-381 signatures using the Apache Milagro curve library, targeting Ethereum 2.0"
license = "Apache-2.0"
repository = "https://github.com/Snowfork/milagro_bls.git"
edition = "2021"

[[bench]]
name = "bls381_benches"
harness = false

[dependencies]
amcl = { package = "snowbridge-amcl", version="1.0.2", default-features = false, features = ["bls381"]}
hex = { version = "0.4.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
rand = { version = "0.8.5", default-features = false }
zeroize = "1.0.0"
codec = { version = "3.6.1", package = "parity-scale-codec", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# This cannot be specified as dev-dependencies. Otherwise a cargo bug will always resolve `rand` with `std` feature, which breaks `no_std` builds.
criterion = { version = "0.4.0", optional = true }

[features]
default = ["std"]
bench = ["criterion"]
std = [
  "rand/std",
  "rand/std_rng",
  "lazy_static",
  "hex",
  "codec/std",
  "scale-info/std",
  "amcl/std",
]
